--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -90,6 +90,7 @@ a:hover{text-decoration:none;}
 	a{color: $color-texto; font-size:10.4px;}
 	img{margin-left:2px;}
 }
+.header-titular a{color: $color-texto;}
 .justificado{text-align:justify;}
 .left{text-align:left;}
 .right{text-align:right;}
@@ -160,18 +161,16 @@ a:hover{text-decoration:none;}
 	.enviar{text-align:center;}
 }
 #inicio{
-	h1,h3,h4{font-family: "Courgette", sans-serif; font-weight:700; text-align:center;}
+	h1,h3,h4{font-family: "TP Sans", sans-serif; font-weight:700; text-align:center;}
+	.noticias{font-family: "PT Sans", sans-serif;}
 	.noticias{
-		h3,h4{position:relative; bottom:5em;color:#fff;text-align:left}
+		h3,h4{padding-top:75%;color:#fff;text-align:left; padding-left:4%; padding-right:2%;}
 		.capa-degradada{
-			width:100%; 
-			height:auto;
-			background-color:rgba(0,0,0,0.3);
-			position:relative;
-			top:0;
+			background-color:rgba(0,0,0,0.5);
 		}
-
-	}
+		.principal{background:url(../image/img_grid_principal.jpg); background-size: cover;  background-position: top;  margin:0; padding:0;}
+		.secundario-1{background:url(../image/img_grid_secundario.jpg); background-size: cover;  background-position: top;  margin:0; padding:0;}
+		.secundario-2{background:url(../image/img_grid_especiales.jpg); background-size: cover;  background-position: top;  margin:0; padding:0;}
 	.lista-columnista{
 		img{border: 2px solid #fff; margin:0.5em auto;}
 		li{
