--- a/assets/jade/contacto.jade
+++ b/assets/jade/contacto.jade
@@ -2,6 +2,7 @@ extends ci/layout.jade
 include ci/mixin.jade
 block header-editorial-noticia
 	+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
+block tema-banner-image
 block content
 	#contacto
 		h1.text-center Contáctese con nosotros
