--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -85,7 +85,7 @@ block content
 			.col-sm-4
 				//-suscribete
 				.row.mg-medio.suscribete
-					.text-center
+					.icon-center
 						+imagen('../image/img_sucribe.png')
 					.div.text-center
 						h3 Suscribete a nuestro boletín
@@ -112,7 +112,7 @@ block content
 						+art('../image/img_fotodes.jpg',' Alianza Lima vs Fénix: íntimos ganaron 1-0 en "Noche Blanquiazul"|VIDEOS Y FOTOS')
 						+art('../image/img_especiales_tenis.jpg','Tomas Berdych derrotó3-0 a Rafael Nadal y avanzó en el Australian Open|FOTOS')
 				//-especiales
-				.row.especiales.borde-inf.pd-medio
+				.row.especiales.borde-inf.pd-medio.tittle-especial
 					a.btn-plomo(href="#") ESPECIALES
 					ul.list-unstyled.list-inline
 						+imagen-capa('../image/img_especiales_aside.jpg','Regimen laboral juvenil')
