--- a/assets/jade/ci/layout.jade
+++ b/assets/jade/ci/layout.jade
@@ -99,7 +99,7 @@ html(lang='es-PE')
 					block publicidad-right-image
 						+imagen('../image/cambiatullanta.jpg')
 			//-footer
-			.row.f-plomo
+			.row.f-plomo.footer
 				.col-md-2
 				.col-md-8
 					.row
